# soundsym

./: Cargo.toml
examples/: louder.rs  matcher.rs  partition.rs  pitch_confidence.rs  reconstruction.rs
examples/reconstruction/: Cargo.toml
examples/reconstruction/src/: events.rs  handlers.rs  main.rs
src/: .lib.rs.swn  .sound.rs.swn  lib.rs  sound.rs
