[package]
name = "soundsym"
version = "0.1.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]

[dependencies]
voting_experts = { git = "https://github.com/andrewcsmith/voting_experts.git" }
sample = "0.6.2"
vox_box = { path = "../vox_box" }
hound = "2.0"
getopts = "0.2"
num = "*"
time = "*"
rusty-machine = "0.5.4"
rulinalg = "0.4.2"

